samples/_failures_safe/1761321059_cc82aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ed5ec45.c: In function ‘main’:
./samples/SAFE/__tmp_8ed5ec45.c:168:45: error: missing terminating ' character
  168 |                     input_buffer[len - 1] = '\0
      |                                             ^~~
./samples/SAFE/__tmp_8ed5ec45.c:168:21: error: expected expression at end of input
  168 |                     input_buffer[len - 1] = '\0
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_8ed5ec45.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ed5ec45.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ed5ec45.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ed5ec45.c:168:21: error: expected declaration or statement at end of input
